passing favoriteMovies array as a second parameter through res.render

--- a/views/pages/tvshows.ejs
+++ b/views/pages/tvshows.ejs
@@ -15,6 +15,11 @@
             <div class="jumbotron">
                 <h1>Fish</h1>
                 <p>Welcome to TV Shows(☞ﾟヮﾟ)☞</p>
+                <ul>
+                    <li><%= favoriteTvShows[0] %></li>
+                    <li><%= favoriteTvShows[1] %></li>
+                    <li><%= favoriteTvShows[2] %></li>
+                </ul>
             </div>
         </div>
     
