--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,6 +13,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/tvshows">TV Shows</a></li>
+                <li><a href="/Movies">Movies</a></li>
                 <li><a href="/error">Error</a></li>
                 <li><a href="/uploadData?msg=answer to everything&id=42">uploadData</a></li>
             </ul>
