adjusting favoriteTVshows to be an object with Key/value pairs.

--- a/views/pages/tvshows.ejs
+++ b/views/pages/tvshows.ejs
@@ -13,12 +13,12 @@
     <div class="row">
         <div class="col-sm-8">    
             <div class="jumbotron">
-                <h1>Fish</h1>
+                <h1>Favorite TV Shows</h1>
                 <p>Welcome to TV Shows(☞ﾟヮﾟ)☞</p>
                 <ul>
-                    <li><%= favoriteTvShows[0] %></li>
-                    <li><%= favoriteTvShows[1] %></li>
-                    <li><%= favoriteTvShows[2] %></li>
+                    <li><%= favoriteTvShows.Movie1 %></li>
+                    <li><%= favoriteTvShows.Movie2 %></li>
+                    <li><%= favoriteTvShows.Movie3 %></li>
                 </ul>
             </div>
         </div>
