--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,28 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <% include ../partials/head %>
-</head>
-<body class="container">
+  </head>
+  <body class="container">
+    <header><% include ../partials/header %></header>
 
-<header>
-    <% include ../partials/header %>
-</header>
+    <h2><%= message %></h2>
+    <h3><%= error.status %></h3>
+    <pre><%= error.stack %></pre>
 
+    <!-- <pre> element represents preformatted text which is to be presented exactly as written in the HTML file. -->
 
-<h2><%= message %></h2>
-<h3><%= error.status %></h3>
-<pre><%= error.stack %></pre>
-
-<!-- <pre> element represents preformatted text which is to be presented exactly as written in the HTML file. -->
-
-<footer>
-    <% include ../partials/footer %>
-</footer>
-
-</body>
+    <footer><% include ../partials/footer %></footer>
+  </body>
 </html>
-
-
-
