--- a/views/pages/Movies.ejs
+++ b/views/pages/Movies.ejs
@@ -1,39 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <% include ../partials/head %>
-</head>
-<body class="container">
+  </head>
+  <body class="container">
+    <header><% include ../partials/header %></header>
 
-<header>
-    <% include ../partials/header %>
-</header>
+    <main>
+      <div class="row">
+        <div class="col-sm-8">
+          <div class="jumbotron">
+            <h1>Movies</h1>
+            <p>Welcome to favorite Movies(☞ﾟヮﾟ)☞</p>
+            <ul>
+              <li><%= favoriteMovies[0] %></li>
+              <li><%= favoriteMovies[1] %></li>
+              <li><%= favoriteMovies[2] %></li>
+            </ul>
+          </div>
+        </div>
 
-<main>
-    <div class="row">
-        <div class="col-sm-8">    
-            <div class="jumbotron">
-                <h1>Movies</h1>
-                <p>Welcome to favorite Movies(☞ﾟヮﾟ)☞</p>
-                <ul>
-                    <li><%= favoriteMovies[0] %></li>
-                    <li><%= favoriteMovies[1] %></li>
-                    <li><%= favoriteMovies[2] %></li> 
-                </ul>
-            </div>
+        <div class="col-sm-4">
+          <div class="well">
+            <h3>Look I'm A Sidebar!</h3>
+          </div>
         </div>
-    
-        <div class="col-sm-4">        
-            <div class="well">
-                <h3>Look I'm A Sidebar!</h3>
-            </div>
-        </div>
-    
-    </div>
+      </div>
     </main>
-    <footer>
-        <% include ../partials/footer %>
-    </footer>
-    
-    </body>
-    </html>
+    <footer><% include ../partials/footer %></footer>
+  </body>
+</html>
