--- a/views/pages/uploadData.ejs
+++ b/views/pages/uploadData.ejs
@@ -1,25 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <% include ../partials/head %>
-</head>
-<body class="container">
+  </head>
+  <body class="container">
+    <header><% include ../partials/header %></header>
+    <main>
+      <div class="jumbotron">
+        <h2>Here is your data</h2>
+        <h2><%= value1PassedToRenderPage %></h2>
+        <h3><%= value2PassedToRenderPage %></h3>
+      </div>
+    </main>
 
-<header>
-    <% include ../partials/header %>
-</header>
-<main>
-  <div class="jumbotron">
-      <h2>Here is your data</h2>
-      <h2><%= value1PassedToRenderPage %></h2>
-      <h3><%= value2PassedToRenderPage %></h3>
-  </div>
-</main>
-
-<footer>
-  <% include ../partials/footer %>
-</footer>
-
-</body>
+    <footer><% include ../partials/footer %></footer>
+  </body>
 </html>
