modifying pages to use object & props

--- a/views/pages/Movies.ejs
+++ b/views/pages/Movies.ejs
@@ -13,9 +13,9 @@
             <h1>Movies</h1>
             <p>Welcome to favorite Movies(☞ﾟヮﾟ)☞</p>
             <ul>
-              <li><%= favoriteMovies[0] %></li>
-              <li><%= favoriteMovies[1] %></li>
-              <li><%= favoriteMovies[2] %></li>
+              <li><%= favoriteMovies.Movie1 %></li>
+              <li><%= favoriteMovies.Movie2 %></li>
+              <li><%= favoriteMovies.Movie3 %></li>
             </ul>
           </div>
         </div>
