--- a/views/pages/tvshows.ejs
+++ b/views/pages/tvshows.ejs
@@ -13,9 +13,9 @@
             <h1>Favorite TV Shows</h1>
             <p>Welcome to TV Shows(☞ﾟヮﾟ)☞</p>
             <ul>
-              <li><%= favoriteTvShows.Movie1 %></li>
-              <li><%= favoriteTvShows.Movie2 %></li>
-              <li><%= favoriteTvShows.Movie3 %></li>
+              <li><%= favoriteTvShows.tvshow1 %></li>
+              <li><%= favoriteTvShows.tvshow2 %></li>
+              <li><%= favoriteTvShows.tvshow3 %></li>
             </ul>
           </div>
         </div>
